--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('worker.js').then(function(registration) {
-            console.log('Worker registration has occurred yay!', registration.scope);
+            console.log('Worker registration is awesome', registration.scope);
           }, function(err) {
             console.log('Worker registration failed', err);
           }).catch(function(err) {
